# serow

./: .clang-format  .flake8  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile  LICENSE  README.md  foxglove_layout.json  package.xml
core/src/: BaseEKF.cpp  BaseEKF.hpp  BaseEstimator.hpp  Buffer.cpp  Buffer.hpp  ButterworthLPF.cpp  ButterworthLPF.hpp  CMakeLists.txt  CoMEKF.cpp  CoMEKF.hpp  ContactDetector.hpp  ContactEKF.cpp  ContactEKF.hpp  DebugLogger.cpp  DebugLogger.hpp  DerivativeEstimator.cpp  DerivativeEstimator.hpp  Differentiator.cpp  Differentiator.hpp  ExteroceptionLogger.cpp  ExteroceptionLogger.hpp  ForceTorqueMeasurementBuffer.cpp  ForceTorqueMeasurementBuffer.hpp  ImuMeasurementBuffer.cpp  ImuMeasurementBuffer.hpp  JointEstimator.cpp  JointEstimator.hpp  LegOdometry.cpp  LegOdometry.hpp  LocalTerrainMapper.cpp  LocalTerrainMapper.hpp  Mahony.hpp  Measurement.hpp  MeasurementLogger.cpp  MeasurementLogger.hpp  MovingMedianFilter.hpp  NaiveLocalTerrainMapper.cpp  NaiveLocalTerrainMapper.hpp  NaiveTerrainElevation.cpp  NaiveTerrainElevation.hpp  (+25 more)
evaluation/fsc_test/: CMakeLists.txt  README.md  fsc_test.cpp  hypertuner.cpp  serow_viz.py  test_config.json
evaluation/mujoco_test/: CMakeLists.txt  README.md  elevation_map_viz.py  go2_mujoco_test.cpp  hypertuner.cpp  serow_viz.py  test_config.json
evaluation/mujoco_test/humanoid/: CMakeLists.txt  humanoid_mujoco_test.cpp  serow_viz.py  test_config.json
evaluation/mujoco_test/mujoco_data/flat_gamma/: experiment_description.txt  serow_predictions.h5
evaluation/mujoco_test/mujoco_data/flat_start_stop/: experiment_description.txt  serow_predictions.h5
evaluation/mujoco_test/mujoco_data/random_walk_flat/: experiment_description.txt
evaluation/mujoco_test/mujoco_data/rough/: experiment_description.txt  serow_predictions.h5
evaluation/mujoco_test/mujoco_data/slope/: serow_predictions.h5
evaluation/mujoco_test/mujoco_data/trot/: experiment_description.txt
evaluation/mujoco_test/quadruped/: CMakeLists.txt  go2_mujoco_test.cpp  quad_mujoco_test.cpp  serow_viz.py  test_config.json
evaluation/unit_tests/: CMakeLists.txt  CheckBuffer.cpp  CheckRecenterElevationMap.cpp  CheckTerrainElevation.cpp  go1_test.cpp  lie_test.cpp  nao_test.cpp
evaluation/unit_tests/data/: go1.csv
python/serow/: CMakeLists.txt  __init__.py  ac.py  contact_ekf_bindings.cpp  ddpg.py  env.py  env_sac.py  env_validation.py  evaluate.py  example.py  gen_training_dataset.py  generate_log.py  inference.py  inference_ddpg.py  inverted_pendulum.py  inverted_pendulum_ddpg.py  inverted_pendulum_ppo.py  inverted_pendulum_ppo2.py  logger.py  measurement_bindings.cpp  parallel_inverted_pendulum_ppo.py  parallel_train_ppo.py  pend_rl.py  plot_contacts.py  ppo.py  read_mcap.py  rl.py  rl_discrete.py  rl_sac.py  serow_bindings.cpp  state_bindings.cpp  state_normalization_test.py  test.py  test_sac.py  train.py  train_ddpg.py  train_ppo.py  train_ppo_diag.py  train_sac.py  tune.py  (+1 more)
python/serow/rl/: rl.py  train.py
refactor/: ButterworthLPF.cpp  ButterworthLPF.hpp  CMakeLists.txt  CoMEKF.cpp  CoMEKF.hpp  ContactDetector.hpp  ContactEKF.cpp  ContactEKF.h  ContactEKF.hpp  Differentiator.cpp  Differentiator.hpp  IMUEKF.cpp  IMUEKF.h  IMUEKF.hpp  JointEstimator.cpp  JointEstimator.hpp  LegOdometry.cpp  LegOdometry.hpp  Madgwick.hpp  Mahony.hpp  Measurement.hpp  Measurements.hpp  Mediator.hpp  README.md  RobotKinematics.hpp  Serow.cpp  Serow.hpp  State.cpp  State.hpp  lie.hpp  test.cpp  update.md
refactor/config/: go2.json  nao.json  test.json
refactor/src/: ButterworthLPF.cpp  ButterworthLPF.hpp  CoMEKF.cpp  CoMEKF.hpp  ContactDetector.hpp  ContactEKF.cpp  ContactEKF.hpp  DerivativeEstimator.cpp  DerivativeEstimator.hpp  Differentiator.cpp  Differentiator.hpp  JointEstimator.cpp  JointEstimator.hpp  LegOdometry.cpp  LegOdometry.hpp  Mahony.hpp  Measurement.hpp  MovingMedianFilter.hpp  RobotKinematics.hpp  Serow.cpp  Serow.hpp  State.cpp  State.hpp  lie.hpp
refactor/test/: go2_test.cpp  nao_test.cpp
refactor/urdf/: cogimon.urdf  go1.urdf  talos_full_v2.urdf
ros/serow_ros/: CMakeLists.txt  package.xml
ros/serow_ros/config/: valk_config.yaml
ros/serow_ros/src/: serow_driver.cpp
ros/serow_ros2/: CMakeLists.txt  package.xml
ros/serow_ros2/src/: driver.cpp
ros/src/serow_ros/: CMakeLists.txt  package.xml
ros/src/serow_ros/config/: valk_config.yaml
ros/src/serow_ros/launch/: serow_valk.launch
ros/src/serow_ros/src/: serow_driver.cpp
ros2/src/serow_ros2/: CMakeLists.txt  package.xml
ros2/src/serow_ros2/config/: h1_config.yaml
ros_ws/src/serow_ros/: CMakeLists.txt  package.xml
serow_hypertuner/: CMakeLists.txt  README.md
serow_hypertuner/config/: bayesSettings.json  experimentConfig.json  params_to_optimize.json
serow_hypertuner/config/robots/: anymal_b.json  go2.json  h1_frames.json
serow_hypertuner/include/: BayesOptimizer.hpp  DataManager.hpp
serow_hypertuner/src/: BayesOptimizer.cpp  DataManager.cpp  HyperTuner.cpp
serow_ros2/: CMakeLists.txt  README.md  package.xml
serow_ros2/config/: anymal_b.yaml  centauro_config.yaml  cogimon_config.yaml  go2_config.yaml  h1.yaml  spot.yaml  talos_config.yaml  valkyrie_config.yaml
serow_ros2/launch/: rviz.launch.py  serow_anymal_b.launch.py  serow_centauro.launch.py  serow_cogimon.launch.py  serow_go2.launch.py  serow_h1.launch.py  serow_ros2.py  serow_spot.launch.py  serow_talos.launch.py  serow_valkyrie.launch.py
serow_ros2/share/: serow_ros2.rviz
serow_ros2/src/: SerowRos2.cpp  SerowRos2.hpp  serow_driver.cpp
test/: CMakeLists.txt  CheckTerrainElevation.cpp  README.md  go1_test.cpp  go2_test.cpp  nao_test.cpp  terrain_elevation_test.cpp
test/a1_experiments/: a1_serow_test.cpp  a1_serow_viz.py
test/data/: go1_odom.csv
test/mujoco_test/: CMakeLists.txt  base_pose_viz.py  elevation_map_viz.py  go2_mujoco_test.cpp  serow_viz.py
test/mujoco_test/data/: go2_mujoco_data.h5  serow_predictions.h5
test/results/: go1_odom.txt  go1_serow_estimates.txt  go2_serow_estimates.txt
test/scripts/: plot_config.yaml  plot_data.py  plot_grf_config.yaml  plot_grf_data.py
(+269 files in other folders)
