<?xml version="1.0"?>
<package>
  <name>serow</name>
  <version>1.0.0</version>
  <description>State Estimation Robot Walking (SEROW)</description>
  <author email="spiperakis@ics.forth.gr">Stylianos Piperakis</author> 
  <maintainer email="spiperakis@ics.forth.gr">Stylianos Piperakis</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>
