<?xml version="1.0"?>
<package format="2">
  <name>serow_ros</name>
  <version>1.0.0</version>
  <description>The serow_ros package</description>
  <maintainer email="stpiperakis@gmail.com">Stylianos Piperakis</maintainer>
  <maintainer email="maravgakis@ics.forth.gr">Micheal Maravgakis</maintainer>

  <license>GPL-3.0-only</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pinocchio</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
</package>
